Take ownership of the GFile in the GPtrArray

https://bugzilla.gnome.org/show_bug.cgi?id=739237